<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteText"
        android:layout_marginBottom="@dimen/size_30"
        android:text="@string/welcome_tittle_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_circle_form"/>

    <ImageView
        android:id="@+id/iv_circle_form"
        android:layout_width="@dimen/size_120"
        android:layout_height="@dimen/size_120"
        android:src="@drawable/style_circle_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/empty_value"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_speed="1.3"
        app:lottie_rawRes="@raw/raw_popcorn"
        tools:ignore="ImageContrastCheck"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteText"
        android:textAlignment="center"
        android:paddingHorizontal="@dimen/size_60"
        android:layout_marginTop="@dimen/size_30"
        android:text="@string/welcome_body_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_circle_form"/>

    <ImageView
        android:id="@+id/iv_close_form"
        android:layout_width="@dimen/size_60"
        android:layout_height="@dimen/size_60"
        android:padding="@dimen/size_20"
        android:src="@drawable/ic_close"
        android:layout_marginEnd="@dimen/size_20"
        android:layout_marginBottom="@dimen/size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTittle"
        android:contentDescription="@string/empty_value"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>